# OdorEvokedDynamics

./: .gitignore  imagingDataFromEzcalciumROIs_SCRIPT.m  imagingDataFromFijiROIs_SCRIPT.m  imagingDataFromFijiROIs_SCRIPT2.m  imgRegistration_SCRIPT.m  motionCorrection.m  motionMetrics.m  olfactometer_csv_analysis.m  olfactometer_h5_imgs_analysis.asv  olfactometer_h5_imgs_analysis.m  plotComparisons.m  plot_all_ROIs.m  saveAllFigs.m  saveFigsAndWorkspace.m  timeSeriesFromFijiROIs_SCRIPT.m
+NoRMCorre/: NoRMCorreSetParms.m  apply_shifts.m  bigread2.m  cell2mat_ov_sum.m  concatenate_files.m  correct_bidirectional_offset.m  dftregistration_min_max.m  dftregistration_min_max_3d.m  downsample_data.m  h5_2_bin.m  han.m  loadtiff.m  loadtiff_old.m  mat2cell_ov.m  motion_metrics.m  normcorre.m  normcorre_batch.m  normcorre_batch_even.m  read_file.m  read_raw_file.m  refreshdisp.m  register_frame.m  remove_boundaries.m  saveash5.m  saveastiff.m  savefast.m  shift_reconstruct.m  split_frame.m
From others/: VoltageImagingOdorTrials.m
From others/EZcalcium/: ez_settings.mat
From others/EZcalcium/CaImAn-MATLAB/: merge_components.m  update_temporal_components.m
From others/ReadImageJROI/: ROIs2Regions.m
From others/cvx/: MANIFEST  cvx_version.m
From others/cvx/lib/: cvx_bcompress_mex.mexa64  cvx_bcompress_mex.mexmaca64  cvx_bcompress_mex.mexmaci64  cvx_bcompress_mex.mexw64  cvx_eliminate_mex.mexa64  cvx_eliminate_mex.mexmaca64  cvx_eliminate_mex.mexmaci64  cvx_eliminate_mex.mexw64
From others/cvx/sdpt3/: README.md  install_sdpt3.m
From others/cvx/sedumi/: adendotd.mexa64  adendotd.mexmaca64  adendotd.mexmaci64  adendotd.mexw64  adenscale.mexa64  (+133 more)
From others/scanimage-tiff-reader-master/: .gitlab-ci.yml  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.rst
From others/scanimage-tiff-reader-master/cmake/: git-versioning.cmake  static-runtime.cmake
From others/scanimage-tiff-reader-master/doc/: Doxyfile  make.bat  readme.rst  requirements.txt
From others/scanimage-tiff-reader-master/doc/source/: c-api.rst  c.rst  command-line-tool.rst  conf.py  format.rst  index.rst  intro.rst
From others/scanimage-tiff-reader-master/doc/source/performance/: details.rst  index.rst  summary.rst
From others/scanimage-tiff-reader-master/scripts/: Dockerfile  about.rst  build.ps1  build_docs.ps1  continuous.ps1  continuous_docs.ps1
From others/scanimage-tiff-reader-master/scripts/bench/: Macro.ijm.py  readstack.m
From others/scanimage-tiff-reader-master/src/: .ycm_extra_conf.py  CMakeLists.txt  main.cpp  platform.h  tiff.reader.api.cpp  tiff.reader.api.h  tiff.reader.h
From others/scanimage-tiff-reader-master/src/cmake/: julia.cmake  python.cmake
From others/scanimage-tiff-reader-master/src/linux/: ProgramName.cpp  io.h
From others/scanimage-tiff-reader-master/src/win32/: ProgramName.cpp  io.h
From others/scanimage-tiff-reader-master/tests/: CMakeLists.txt  read_frame_interval.c
(+297 files in other folders)
